# embedded_webserver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libhttpserver/: CMakeLists.txt  RequestRouter.cpp  RequestRouter.h  WebServer.cpp  WebServer.h  http_common.cpp  http_common.h  ssl_certificate.h
